--- a/Audiator/Audiator/Audiator.csproj
+++ b/Audiator/Audiator/Audiator.csproj
@@ -18,5 +18,6 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+    <PackageReference Include="NAudio" Version="2.1.0" />
   </ItemGroup>
 </Project>
